--- a/5/css/style.css
+++ b/5/css/style.css
@@ -1,3 +1,126 @@
 body {
+    font-family: Economica;
+    padding: 0;
+    margin: 0;
     text-align: center;
+}
+
+.orange {
+    position: relative;
+    left: 50px;
+    top: 100px;
+    width: 300px;
+    height: 300px;
+    background-color: #ee8129;
+    border-radius: 5px;
+}
+
+.best {
+    display: inline-block;
+    position: relative;
+    top: 30px;
+    font-size:  35px;
+    font-weight: 700;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.white {
+    position: relative;
+    top: 65px;
+    width: 292px;
+    height: 370px;
+    background-color: white;
+    border: 4px solid #ee8129;
+    border-radius: 5px;
+}
+
+.iconic {
+    display: inline-block;
+    color: #35495a;
+    font-size: 30px;
+    position: relative;
+    top: 5px;
+}
+
+sup {
+    font-weight: 900;
+    position: relative;
+    top: -7px;
+    left: 5px;
+}
+
+.price {
+    position: relative;
+    top: 15px;
+    font-size: 65px;
+    font-weight: 700;
+}
+
+.Monthly {
+    position: relative;
+    top: 23px;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.table {
+    position: relative;
+    width: 260px;
+    height: 260px;
+    top: -15px;
+    text-align: left;
+}
+
+img {
+    position: absolute;
+    left: 34px;
+    width: 17px;
+}
+
+.first {
+    padding: 10px 0;
+    position: relative;
+    top: 50px;
+    left: 15px;
+    width: 100%;
+    background-color: #edf5fd;
+}
+
+.first1 {
+    padding: 8px 0;
+    position: relative;
+    top: 50px;
+    left: 15px;
+    width: 100%;
+    background-color: #f5f5f6;
+}
+
+.table-text {
+    display: inline-block;
+    position: relative;
+    left: 75px;
+    font-weight: 700;
+    color: #888c94;
+    letter-spacing: 2px;
+}
+
+.button {
+    position: relative;
+    left: 15px;
+    text-align: center;
+    top: -60px;
+    background-color: #ee8129;
+    color: white;
+    width: 260px;
+    height: 40px;
+    border-radius: 5px;
+    letter-spacing: 2px;
+}
+
+.button-text {
+    position: relative;
+    top: 7px;
+    font-size: 20px;
+    font-weight: 700;
 }
