--- a/5/css/style.css
+++ b/5/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Economica;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     padding: 0;
     margin: 0;
     text-align: center;
@@ -20,9 +20,7 @@ body {
     position: relative;
     top: 30px;
     font-size:  35px;
-    font-weight: 700;
     color: white;
-    letter-spacing: 2px;
 }
 
 .white {
@@ -44,7 +42,6 @@ body {
 }
 
 sup {
-    font-weight: 900;
     position: relative;
     top: -7px;
     left: 5px;
@@ -54,13 +51,11 @@ sup {
     position: relative;
     top: 15px;
     font-size: 65px;
-    font-weight: 700;
 }
 
 .Monthly {
     position: relative;
     top: 23px;
-    font-weight: 700;
     letter-spacing: 2px;
 }
 
@@ -100,9 +95,7 @@ img {
     display: inline-block;
     position: relative;
     left: 75px;
-    font-weight: 700;
     color: #888c94;
-    letter-spacing: 2px;
 }
 
 .button {
@@ -115,7 +108,6 @@ img {
     width: 260px;
     height: 40px;
     border-radius: 5px;
-    letter-spacing: 2px;
 }
 
 .button-text {
