--- a/project1/css/Style.css
+++ b/project1/css/Style.css
@@ -140,7 +140,7 @@ h2 {
     
 }
 
-h3 {
+.h3-lorem {
     line-height: 33px;
     margin: auto;
     text-align: center;
@@ -355,4 +355,192 @@ h3 {
 
 li {
     margin: 20px;
+}
+
+
+
+
+
+.four-block {
+    text-align: center;
+    display: block;
+    height: 585px;
+}
+
+.title-list {
+    font-size: 4ex;
+    display: block;
+    margin: 40px;
+    color: #16436a;
+    font-weight: 700;
+    font-family: Montserrat;
+}
+
+.first-tile {
+    position: relative;
+    right: -10px;
+    display: inline-block;
+    width: 298px;
+    height: 380px;
+}
+
+.top-block {
+    position: relative;
+    display: block;
+    background-color: #37c2d3;
+    width: 300px;
+    height: 75px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.top-h2 {
+    padding: 20px 10px;
+    color: white;
+}
+
+.midle-block {
+    display: block;
+    position: relative;
+    top: -5px;
+    background-color: white;
+    border: 1px solid #e8eaec;
+    width: 298px;
+    height: 380px;
+    text-align: center;
+}
+
+.midle-h3 {
+    padding: 0px;
+    color: #364959;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.dolar {
+    color: #364959;
+    position: relative;
+    top: -30px;
+    font-weight: 700;
+}
+
+.price {
+    position: relative;
+    color: #364959;
+    font-weight: 700;
+    font-size: 60px;
+}
+
+.monthly {
+    font-weight: 700;
+    color: #364959;
+}
+
+.table {
+    position: relative;
+    top: 15px;
+    margin: auto;
+    width: 260px;
+    height: 260px;
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+.img-gal {
+    position: absolute;
+    left: 34px;
+    width: 17px;
+}
+
+.first {
+    padding: 10px 0;
+    background-color: #edf5fd;
+    border: 1px solid white;
+}
+
+.first1 {
+    padding: 8px 0;
+    background-color: #f3f3f3;
+    border: 1px solid white;
+}
+
+.table-text {
+    display: inline-block;
+    position: relative;
+    left: 75px;
+    color: #888c94;
+}
+
+.button-enrol {
+    color: white;
+    border: 0px;
+    height: 40px;
+    border-bottom: 3px solid #16436a;
+    width: 260px;
+    border-radius: 4px;
+    background-color: #3371a6;
+    position: relative;
+    top: -65px;
+    margin: auto;
+    padding: 10px 20px;
+    outline: none;
+    cursor: pointer;
+}
+
+.two-tile {
+    display: inline-block;
+    border-radius: 4px;
+    height: 478px;
+    width: 300px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.top-block2 {
+    position: relative;
+    display: inline-block;
+    background-color: #ec8136;
+    width: 300px;
+    height: 85px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.top-h2-2 {
+    padding: 10px 10px;
+    color: white;
+}
+
+.midle-block2 {
+    display: block;
+    position: relative;
+    top: -5px;
+    background-color: white;
+    border: 4px solid #ec8136;
+    border-radius: 4px;
+    width: 292px;
+    height: 390px;
+    text-align: center;
+}
+
+.button-enrol2 {
+    border-bottom: 3px solid #b35715;
+    background-color: #ec8136;
+}
+
+.tree-tile {
+    z-index: -1;
+    position: relative;
+    left: -10px;
+    display: inline-block;
+}
+
+.top-block3 {
+    position: relative;
+    display: block;
+    background-color: #1cb79a;
+    width: 300px;
+    height: 75px;
+    border-radius: 4px;
+    text-align: center;
 }
