--- a/project1/css/Style.css
+++ b/project1/css/Style.css
@@ -8,7 +8,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    font-size: 21px;
+    font-size: 2ex;
 	font-weight: 400;
     font-family: Montserrat;
 	text-align: right;
@@ -16,14 +16,15 @@ body {
 	width: 100%;
     height: 116px;
     background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 10px #444;
 }
 
 .logo {
     color: orange;
     position: absolute;
-    left: 188px;
-    top: 30%;
-    font-size: 3ex;
+    left: 220px;
+    top: 40%;
+    font-size: 3.8ex;
 }
 
 .logo-name {
@@ -32,15 +33,15 @@ body {
 }
 
 .text-heder {
+    clear: left;
     position: relative;
-    bottom: -75px;
-    right: 188px;
+    right: 16%;
     line-height: 10px;
 }
 
 .navbar a {
     color: #989898;
-    padding: 14px 16px;
+    padding: 14px 0px;
     text-decoration: none;
 }
 
@@ -55,8 +56,10 @@ body {
 }
 
 .list .menu {
+    font-weight: 800;
     color: #989898;
-    padding: 14px 16px;
+    padding: 14px 10px;
+    line-height: 85px;
     
 }
 
@@ -694,4 +697,125 @@ li {
     width: 100px;
     height: 100px;
     margin-left: 40px;
+}
+
+
+
+
+
+.niz
+{
+    background-image: url("../img/map.png");
+    background-size: cover;
+    
+}
+
+.niz-niz
+{
+    margin: auto;
+    display: flex;
+    width: 1024px;
+    text-align: center;
+}
+
+.contact
+{
+    display: block;
+    text-align: left;
+    width: 40%;
+    height: 350px;
+}
+
+.icon-nav
+{
+    display: inline;
+
+}
+
+.metka
+{
+    position: relative;
+    top: 39px;
+}
+
+.Phone
+{
+    position: relative;
+    top: 197px;
+    left: -21px; 
+}
+
+.mail
+{
+    position: relative;
+    top: 224px;
+    left: -45px; 
+}
+
+.contact-ul
+{
+    font-size: 2ex;
+    left: 60px;
+    position: relative;
+    display: inline;
+    list-style-type: none; 
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 10px;
+}
+
+.contact-ul-two
+{
+    padding: 0px;
+    font-size: 2ex;
+    left: 60px;
+    top: 35px;
+    position: relative;
+    display: block;
+    list-style-type: none; 
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 10px;
+}
+
+.social
+{
+    position: relative;
+    top: 40px;
+}
+
+.facebook
+{
+    margin-right: 15px;
+}
+
+.twiter
+{
+    margin-right: 15px; 
+}
+
+.map 
+{
+    width: 60%;
+}
+
+.jopka
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: #3070a8;
+    padding-top: 25px;
+    line-height: 25px;
+    text-align: center;
+    width: 100%;
+    height: 75px;
+}
+
+.Company
+{
+    font-weight: 700;
+}
+
+.Iconic
+{
+    font-weight: 800;
+    color: #1d1c1c;
 }
