--- a/11/css/style.css
+++ b/11/css/style.css
@@ -84,32 +84,59 @@ header
     cursor: pointer;
 }
 
-.menu-blog-div
-{
+
+
+
+.item-menu-content {
+    display: none;
     position: absolute;
-    top: 21px;
-    right: -35px;
+    background-color: #fafafa;
+    min-width: 160px;
+    z-index: 1;
+    left: 340px;
+    border: 2px solid rgb(224, 224, 224);
+    border-radius: 4px;
 }
 
-.blog-menu
-{
-    position: absolute;
-    top: 8px;
-    left: -34px;
-    list-style: none;
-    font-size: 12px;
-    color: #666666;
+.item-menu-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: inline-block;
+    border-bottom: 1px solid rgb(224, 224, 224);
+    width: 80%;
+}
+
+.item-menu-content a span {
+    font-size: 8px;
+    color: rgb(0, 0, 0);
+    display: none;
+}
+
+.item-menu-content a:hover  span{
     display: block;
-    width: 90%;
-
-}
-
-.blog-menu-li
-{
-    padding: 10px;
-    height: 19px;
     
 }
+
+.item-menu-content a:hover {
+    background-color: rgb(233, 233, 233);
+    border-radius: 6px;
+    border: 3px solid rgb(248, 248, 248);
+    padding: 9px 13px;
+    
+    
+}
+
+.blog:hover .item-menu-content {
+    display: block;
+}
+
+.blog:hover .dropbtn {
+   background-color: red; 
+}
+
+
+
 
 .item-menu-apply-li
 {
@@ -485,6 +512,7 @@ header
     border: 1px solid #cfcfcf;
     top: 0px;
     border-radius: 3px;
+    
 }
 
 .tabs::before,
