--- a/site-reklama/css/style1.css
+++ b/site-reklama/css/style1.css
@@ -36,6 +36,7 @@ header
 
 .logo-name:hover
 {
+    cursor: pointer;
     letter-spacing: 12px;
     transition: 0.4s;
 }
@@ -44,6 +45,7 @@ header
 {
     display: none;
     font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
 }
 
 .nav-bar
@@ -255,6 +257,7 @@ header
 {
     font-size: 5rem;
     margin: 0 0 10px 0;
+    line-height: 4.4rem;
 }
 
 .sub-text-block
@@ -314,10 +317,10 @@ h1{
 {
     display: flex;
     position: relative; 
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
     margin: 30px auto 30px auto;
-    max-width: 1400px;
+    max-width: 1375px;
 }
 
 .item
@@ -397,14 +400,16 @@ h1{
     background-color: black;
     height: 100%;
     padding-bottom: 80px;
+    text-align: center;
 }
 
 .why-me-box
 {
-    display: block;
+    display: inline-block;
+    justify-content: space-between;
     text-align: center;
     margin: auto; 
-    max-width: 1700px;
+    max-width: 1500px;
 }
 
 .why-me-box-item
@@ -577,7 +582,68 @@ footer
     color: aliceblue;
 }
 
+section
+{
+    background-color: rgb(240, 240, 240);
+}
 
+.contacts
+{
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+    display: flex;
+    height: 600px;
+    text-align: center;
+    max-width: 1350px;
+    margin: auto;
+    padding: 0 50px;
+    
+}
+
+.contacts-text
+{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 40%;
+    padding: 50px 0;
+}
+
+.contacts-map
+{
+    width: 60%;
+}
+
+.contacts-text-main
+{
+    font-family: 'Oxygen Mono', monospace;
+    font-size: 1.7rem;
+    display: inline-block;
+}
+
+.contacts-logo
+{
+    display: inline-block;;
+    font-size: 3rem;
+}
+.contacts-text-main-sub-item
+{
+    color: #181818;
+}
+
+.contacts-ul
+{   
+    display: inline-block;
+    padding: 0;
+    font-size: 1.5rem;
+    color: #181818;
+    list-style: none;
+    position: relative;
+    align-content: flex-end;
+    margin: auto;
+}
 
 
 
@@ -620,6 +686,17 @@ footer
     .sub-text-block
     {
         font-size: 1.4rem;
+    }
+
+    .pic-card
+    {
+        display: block;
+    }
+    
+    .swhich-services
+    {
+        height: auto;
+        padding-bottom: 30px;
     }
 }
 
@@ -680,6 +757,7 @@ footer
     {
         font-size: 3.5rem;
         margin: 0 0 10px 0;
+        line-height: 3rem;
     }
 
     .skoba-item:hover .skoba2
@@ -992,7 +1070,7 @@ footer
     .mobile-menu
     {
         display: block;
-        z-index: 2;
+        z-index: 3;
     }
 
     .skoba
@@ -1013,11 +1091,11 @@ footer
     {
         z-index: 2;
         position: fixed;
+        top: -1px;
         display: block;
         width: 100%;
         height: 62px;
         background-color: #000000;
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.685);
     } 
 
     .menu-full
@@ -1027,6 +1105,7 @@ footer
 
     .nav-bar
     {
+        z-index: 1;
         display: block;
     }
 
@@ -1052,6 +1131,7 @@ footer
         font-size: 4rem;
         margin-bottom: 20px;
         width: 100%;
+        line-height: 4rem;
     }
 
     .sub-text-block
@@ -1081,5 +1161,28 @@ footer
     {
         height: 100%;
         padding: 0 30px 30px 30px;
+    }
+
+    .contacts
+    {
+        flex-direction: column;
+        height: 100%;
+        padding: 0;
+    }
+
+    .contacts-text
+    {
+        width: 70%;
+        height: 350px;
+        padding: 30px;
+    }
+    .contacts-map
+    {
+        width: 100%;
+        height: 650px;
+    }
+    .contacts-ul
+    {
+        font-size: 1.1rem;
     }
 }
