--- a/site-reklama/css/style1.css
+++ b/site-reklama/css/style1.css
@@ -276,9 +276,10 @@ header
 
 .img-item
 {
-    
-    width: 560px;
-    height: 560px;
+    /* box-shadow: 0px 0px 10px rgba(250, 250, 250, 0.534); */
+    width: 559px;
+    height: 559px;
+    border-radius: 180rem;
     background-size: cover;
 }
 
@@ -300,7 +301,8 @@ header
 {
     position: relative;
     display: block;
-    height: 850px;
+    height: auto;
+    padding-bottom: 30px;
     background-color: rgb(240, 240, 240);
     text-align: center;
 }
@@ -308,34 +310,33 @@ header
 h1{
     text-align: center;
     margin: 25px auto 0 auto;
-    padding: 50px 0 50px 0;
+    padding: 25px 0 25px 0;
     font-size: 4rem;
     display: inline-block;
 }
 
 .pic-card
 {
-    display: flex;
-    position: relative; 
     justify-content: space-between;
     text-align: center;
+    align-items: stretch;
     margin: 30px auto 30px auto;
     max-width: 1375px;
+    position: relative;
 }
 
 .item
 {
-    position: relative;
     background-color: rgb(255, 255, 255);
     display: inline-block;
-    top: 0px;
     width: 370px;
-    height: 500px;
+    height: 520px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.384);
     cursor: pointer;
     margin: 15px;
     border-radius: 3px;
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .item:hover
@@ -347,7 +348,6 @@ h1{
 
 .pic-item
 {
-    position: relative;
     
     width: 100%;
 }
@@ -363,10 +363,10 @@ h1{
 .text-item
 {
     text-align: left;
-    padding: 20px;
+    padding: 0 20px;
     padding-top: 0;
-    display: block;
-    height: 200px;
+    
+    height: 220px;
 }
 
 .main-text-item
@@ -427,12 +427,14 @@ h1{
     margin: auto;
     background-color: rgb(240, 240, 240);
     border-radius: 15px;
-    padding: 10px
+    padding: 10px;
+    transition: .5s;
 }
 
 .why-me-box-item-flex:hover
 {
     box-shadow: 0px 0px 5px 5px rgb(255, 255, 255);
+    transition: .5s;
 }
 
 .cirkle-pic
@@ -1011,6 +1013,17 @@ section
 
     }
 
+    .item
+    {
+        width: 330px;  
+    }
+
+    .pic-item-img
+    {
+        width: 300px;
+        padding: 15px;
+    }
+
     .about-item h2
     {
         font-size: 2rem;
@@ -1031,6 +1044,12 @@ section
     .why-me-box-item-flex
     {
         width: 80%;
+    }
+
+    .cirkle-pic
+    {
+        width: 40px;
+        height: 40px;
     }
 
     h1
@@ -1080,6 +1099,8 @@ section
         left: 0;
         margin: auto;
         text-align: center;
+        width: 50%;
+        height: 110%;
     } 
 
     .skoba2
@@ -1128,7 +1149,7 @@ section
     .main-text-block
     {
         text-align: left;
-        font-size: 4rem;
+        font-size: 3.5rem;
         margin-bottom: 20px;
         width: 100%;
         line-height: 4rem;
